--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="langSelector">
-        <button id="lang-ko">한국어</button>
-        <button id="lang-en">English</button>
-    </div>
-
-    <div id="mainContent">
-        <div id="gameContainer">
+    
+        <div id="mainContent">        <div id="gameContainer">
             <canvas id="gameCanvas" width="400" height="600"></canvas>
 
             <!-- In-Game UI -->
@@ -36,6 +31,13 @@
                     <h1>GALAXY DEFENDER</h1>
                     <p><span data-lang="highScore">High Score</span>: <span id="highScoreDisplay">0</span></p>
                     <div class="game-options">
+                        <div class="option-group">
+                            <label for="language" data-lang="language">Language:</label>
+                            <select id="language">
+                                <option value="ko" data-lang="lang-ko">한국어</option>
+                                <option value="en" data-lang="lang-en">English</option>
+                            </select>
+                        </div>
                         <div class="option-group">
                             <label for="gameMode" data-lang="gameMode">Game Mode:</label>
                             <select id="gameMode">
